# rustws

./: Cargo.toml  README.md  test.ws  test.wsv  wsconvert.py
src/: error.rs  instruction.rs  lib.rs  main.rs  symbol.rs  wsiter.rs
