[package]
name = "rustws"
version = "1.0.0"
authors = ["Luminight <balazscsabai98@gmail.com>"]
edition = "2018"
description = "A simple WhiteSpace interpreter"
repository = "https://github.com/Luminighty/rustws"
license = "MIT"
keywords = ["whitespace", "interpreter"]

[lib]
name = "rustws"
path = "src/lib.rs"


# [[bin]]
# name = "wscomp"
# path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.0"